<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginFragment"
    android:background="@color/background_color">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:id="@+id/register_layout"
        tools:context=".Register"
        android:gravity="center"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/Register"
            android:textSize="30sp"
            android:textStyle="bold"
            android:paddingBottom="25dp"
            >
        </TextView>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/email"
                android:hint="@string/email"
                android:background="@color/background_dark_color">
            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/password"
                android:inputType="textPassword"
                android:hint="@string/password"
                android:background="@color/background_dark_color">
            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/confirm_password"
                android:inputType="textPassword"
                android:hint="@string/confirm_password"
                android:background="@color/background_dark_color">
            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:id="@+id/password_conditions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Password must:"
            android:textColor="@color/text_color" />
        <TextView
            android:id="@+id/condition_length"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="- be at least 8 characters long,"
            android:textColor="@color/text_color" />
        <TextView
            android:id="@+id/condition_uppercase"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="- contain at least one upper-case letter"
            android:textColor="@color/text_color" />
        <TextView
            android:id="@+id/condition_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="- contain at least one number"
            android:textColor="@color/text_color" />
        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:indeterminate="true"
            android:visibility="gone" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/register_button"
            android:text="@string/Register"
            android:padding="10dp"
            >
        </Button>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/looking_for_login"
            android:text="@string/looking_for_login"
            android:paddingTop="30dp"
            android:textAllCaps="false"
            android:textColor="@color/secondary_text_color"
            android:background="@drawable/transparent_background">
        </Button>






    </LinearLayout>




</FrameLayout>