<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewPostFragment">

    <ImageView
        android:id="@+id/background_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:scaleType="fitCenter"
        android:src="@drawable/background_clouds"
        android:background="@color/background_color" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">

                <ImageView
                    android:id="@+id/button_image1"
                    android:clickable="true"
                    android:onClick="button1Clicked"
                    android:layout_width="160dp"
                    android:layout_height="160dp"
                    android:src="@drawable/add_a_photo_black_24dp"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Take_a_Photo"
                    android:textColor="@color/main_text_color"
                    android:textStyle="bold"
                    android:textSize="18dp"

                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">

                <ImageView
                    android:id="@+id/button_image2"
                    android:clickable="true"
                    android:layout_width="170dp"
                    android:layout_height="170dp"
                    android:onClick="button2Clicked"
                    android:src="@drawable/add_photo_alternate_black_24dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Choose_from_Gallery"
                    android:textColor="@color/main_text_color"
                    android:textStyle="bold"
                    android:textSize="18dp"
                    android:layout_marginTop="-10dp"
                    />

            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Back"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_alignParentRight="false" />

    </RelativeLayout>

</FrameLayout>
