<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/fragment_profile"
        android:background="@color/background_color">

        <ImageView
            android:id="@+id/background_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:scaleType="fitCenter"
            android:clickable="true"
            android:src="@drawable/background_clouds" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/back"
            >
            <Button
                android:layout_alignParentRight="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Sign_Out"
                android:layout_marginRight="16dp"
                android:layout_marginTop="16dp"
                android:id="@+id/btnSignout"></Button>


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/profile_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/btnSignout"
                android:layout_marginStart="16dp"
                android:layout_marginTop="120dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/back">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/avatar_image_view"
                    style="@style/CircularAvatarStyle"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:background="@color/light_grey"
                    app:layout_constraintStart_toStartOf="parent"
                    android:src="@drawable/add_photo_alternate_black_24dp"
                    app:layout_constraintTop_toTopOf="parent" />

                <LinearLayout
                    android:id="@+id/layout_posted_by"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="0dp"
                    android:orientation="vertical"
                    app:layout_constraintStart_toEndOf="@id/avatar_image_view"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/avatar_image_view">

                    <EditText
                        android:id="@+id/display_name_edit_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:maxLines="2"
                        android:textAlignment="textStart"
                        android:textColor="@color/light_grey"
                        android:textSize="30dp"
                        android:textStyle="bold"
                        android:inputType="text"
                        tools:text="Steve Jobsn't"
                        android:hint="@string/inputYourName"/>

                    <TextView
                        android:id="@+id/post_time_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:maxLines="2"
                        android:textSize="12dp"
                        android:text="Account created on 8:34 PM,  10th June 2023 "
                        android:textColor="@color/light_grey"/>

                    <EditText
                        android:id="@+id/description_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:textColor="@color/light_grey"
                        android:textStyle="bold"
                        android:inputType="textMultiLine"
                        android:background="@null"
                        android:hint="@string/inputYourDescription"
                        tools:text="Brian Marty : my favourite place on earth" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="x/120"
                        android:textColor="@color/successful">

                    </TextView>

                    <Button
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:background="@drawable/baseline_check_24"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginBottom="10dp"
                        android:id="@+id/btnEditProfile"
                        android:layout_gravity="end"
                        android:padding="30dp"

                        >

                    </Button>

                </LinearLayout>



            </androidx.constraintlayout.widget.ConstraintLayout>



        </RelativeLayout>



    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</FrameLayout>